--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,4 @@ destination:        ./_site
 port:               4005
 baseurl:            ""
 url:                http://yoururl.com
+timezone:           America/Los_Angeles
