--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,6 @@
   "license": "MIT",
   "homepage": "http://foundation.zurb.com",
   "dependencies": {
-    "foundation-sites": "~6.1.2",
-    "motion-ui": "~1.1.0",
     "foundation-sites": "~6.2.0",
     "motion-ui": "~1.2.2"
   },
@@ -21,5 +19,8 @@
     "test",
     "tests"
   ],
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "html5shiv": "^3.7.3"
+  }
 }
