All kinds of new awesome store stuff

--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,9 @@ defaults:
       type: products
     values:
       layout: product
+
+slideshow_image_ids:
+  - MixedHeadjoints_fblwql
+  - qdadbhdiiyvucpimpcqa
+  - jukxcq1gd7cmy8klpciz
+  - h9k6bnq2yba9otelwr0q
