Blog, cart, and lots of other little updates

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,12 @@ collections:
 
 defaults:
   - scope:
+      path: "_posts"
+      type: "posts"
+    values:
+      layout: post
+      permalink: "/blog/:title"
+  - scope:
       path: ""
       type: products
     values:
