Move irish flutes to world flutes section, added SEO redirects

--- a/_jekyll/_data/category_labels.yml
+++ b/_jekyll/_data/category_labels.yml
@@ -3,7 +3,7 @@ world-flutes:
   url: /world-flutes
 irish-flutes:
   title: Irish Flutes
-  url: /irish-flutes
+  url: /world-flutes/irish-flutes
 headjoints:
   title: The Ellis-Korb Headjoint
   url: /headjoints
