--- a/_config.yml
+++ b/_config.yml
@@ -47,5 +47,6 @@ defaults:
 slideshow_image_ids:
   - MixedHeadjoints_fblwql
   - qdadbhdiiyvucpimpcqa
+  - ellisflutes2018/Essential_Cropped
   - jukxcq1gd7cmy8klpciz
   - h9k6bnq2yba9otelwr0q
