--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-sass": "^2.1.0"
+    "gulp-sass": "^2.1.0",
+    "natives": "^1.1.6",
+    "node-sass": "^4.10"
   },
   "scripts": {
     "start": "gulp",
