Updated category titles

--- a/_jekyll/_data/category_labels.yml
+++ b/_jekyll/_data/category_labels.yml
@@ -11,13 +11,13 @@ bansuri:
   title: Bansuri
   url: /world-flutes/bansuri
 rim-blown:
-  title: Rim Blown Flutes
+  title: The Basketmaker Flute
   url: /world-flutes/rim-blown
 shakuhachi:
   title: Shakuhachi
   url: /world-flutes/shakuhachi
 transverse-folk:
-  title: Transverse Folk Flutes
+  title: The Essential Flute
   url: /world-flutes/transverse-folk
 xiao:
   title: Xiao
