Updated Irish Flute images

--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,7 @@ defaults:
 slideshow_image_ids:
   - MixedHeadjoints_fblwql
   - qdadbhdiiyvucpimpcqa
+  - ellisflutes2018/IrishFlute1
   - ellisflutes2018/Essential_Cropped
   - jukxcq1gd7cmy8klpciz
-  - h9k6bnq2yba9otelwr0q
+  - ellisflutes2018/IrishFlute2
