--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,7 @@ node_modules
 npm-debug.log
 _site
 previewbuild.log
-_jekyll/css/app.css
+_jekyll/css/all.css
+_jekyll/css/all.css.map
+_jekyll/js/all.js
+_jekyll/js/all.js.map
