--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "foundation-sites-template",
+  "name": "jekyllwebpack",
   "version": "1.0.0",
-  "description": "Basic template for a new Foundation for Sites project.",
-  "main": "gulpfile.js",
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-sass": "^2.1.0",
-    "natives": "^1.1.6",
-    "node-sass": "^4.10"
-  },
-  "scripts": {
-    "start": "gulp",
-    "build": "gulp sass"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/zurb/foundation-sites-template.git"
-  },
-  "bugs": {
-    "url": "https://github.com/zurb/foundation-sites/issues",
-    "email": "foundation@zurb.com"
-  },
-  "author": "ZURB <foundation@zurb.com>",
-  "license": "MIT",
   "private": true,
+  "author": "Jared White",
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack --mode production && jekyll build",
+    "dev": "webpack --mode development -w"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
+  },
   "dependencies": {
-    "gulp-autoprefixer": "^3.1.0"
+    "foundation-sites": "6.4.3",
+    "jquery": "^3.3.1",
+    "mediaelement": "^4.2.10",
+    "motion-ui": "~1.2.2",
+    "stimulus": "^1.1.1"
   }
 }
