--- a/_jekyll/_data/category_labels.yml
+++ b/_jekyll/_data/category_labels.yml
@@ -13,6 +13,9 @@ headjoints:
 bansuri:
   title: Bansuri
   url: /world-flutes/bansuri
+quena:
+  title: Quena
+  url: /world-flutes/quena
 rim-blown:
   title: The Basketmaker Flute
   url: /world-flutes/rim-blown
