New slideshow images

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,8 @@ defaults:
       layout: world_flute
 
 slideshow_image_ids:
+  - ellisflutes2018/SquareShak1
+  - ellisflutes2018/SquareShak2
   - MixedHeadjoints_fblwql
   - qdadbhdiiyvucpimpcqa
   - ellisflutes2018/IrishFlute1
