Upgrade Bridgetown, relocate Headjoints, other fixes

--- a/src/_data/category_labels.yml
+++ b/src/_data/category_labels.yml
@@ -9,7 +9,7 @@ irish-flutes:
   url: /world-flutes/irish-flutes
 headjoints:
   title: The Ellis-Korb Headjoint
-  url: /headjoints
+  url: /world-flutes/headjoints
 bansuri:
   title: Bansuri
   url: /world-flutes/bansuri
