--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "start": "node start.js"
   },
   "dependencies": {
+    "@shoelace-style/shoelace": "^2.0.0-beta.57",
     "foundation-sites": "6.4.3",
     "jquery": "^3.3.1",
     "mediaelement": "^4.2.10",
-    "motion-ui": "~1.2.2",
-    "stimulus": "^1.1.1"
+    "motion-ui": "~1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
