--- a/src/_data/category_labels.yml
+++ b/src/_data/category_labels.yml
@@ -10,6 +10,9 @@ irish-flutes:
 headjoints:
   title: The Ellis-Korb Headjoint
   url: /world-flutes/headjoints
+bamboo:
+  title: Bamboo Flutes
+  url: /world-flutes/bamboo
 bansuri:
   title: Bansuri
   url: /world-flutes/bansuri
