[Admin Bot] Updating product stock BlkEbonQuena

--- a/.yarii/content_models.yml
+++ b/.yarii/content_models.yml
@@ -48,6 +48,11 @@ default: &default
         field_name: layout
         label: Layout Template
         placeholder: Leave blank to use the default template
+      -
+        field_type: text
+        field_name: date
+        label: Date Published
+        placeholder: YYYY-MM-DD
     content_fields:
       -
         field_type: markdown
