--- a/src/_data/category_labels.yml
+++ b/src/_data/category_labels.yml
@@ -19,6 +19,9 @@ bansuri:
 quena:
   title: Quena
   url: /world-flutes/quena
+quenxiao:
+  title: Quenxiao
+  url: /world-flutes/quenxiao
 rim-blown:
   title: The Basketmaker Flute
   url: /world-flutes/rim-blown
