--- a/src/_data/category_labels.yml
+++ b/src/_data/category_labels.yml
@@ -19,9 +19,9 @@ bansuri:
 quena:
   title: Quena
   url: /world-flutes/quena
-quenxiao:
-  title: Quenxiao
-  url: /world-flutes/quenxiao
+quimera:
+  title: Quimera
+  url: /world-flutes/quimera
 rim-blown:
   title: The Basketmaker Flute
   url: /world-flutes/rim-blown
