Update category labels

--- a/src/_data/category_labels.yml
+++ b/src/_data/category_labels.yml
@@ -31,6 +31,12 @@ shakuhachi:
 transverse-folk:
   title: The Essential Flute
   url: /world-flutes/transverse-folk
+theadventureseries:
+  title: The Adventure Series
+  url: /world-flutes/the-adventure-series
+theselkie:
+  title: The Selkie™
+  url: /world-flutes/the-selkie
 xiao:
   title: Xiao
   url: /world-flutes/xiao
